--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
+    "types": ["jest", "@testing-library/jest-dom"],
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
