--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,6 @@
   "extends": [
     "next/core-web-vitals",
     "plugin:testing-library/react",
-    "plugin:jest-dom/Recommended"
+    "plugin:jest-dom/recommended"
   ]
 }
