--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "coverage": "jest --coverage",
-    "postinstall": "husky install",
-    "prepare": "husky install"
+    "postinstall": "husky install"
   },
   "dependencies": {
     "appwrite": "^13.0.0",
