--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "license": "MIT",
   "packageManager": "yarn@3.6.4",
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,ts,tsx}": "eslint --cache --fix",
+    "*.{js,css,md,ts,tsx}": "prettier --write"
   }
 }
