add useResize utils func, fix Nav bar issue, add testing cases

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "coverage": "jest --coverage",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "precommit": "yarn lint && yarn test"
   },
   "dependencies": {
     "appwrite": "^13.0.0",
