--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
