--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "precommit": "yarn lint && yarn test"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.18",
     "appwrite": "^13.0.0",
     "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
