--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@mui/material": "^5.14.18",
     "appwrite": "^13.0.0",
     "classnames": "^2.3.2",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "gray-matter": "^4.0.3",
     "luxon": "^3.4.3",
     "next": "13.5.4",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.1",
