--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.48.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
