--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "gray-matter": "^4.0.3",
+    "jotai": "^2.6.0",
     "luxon": "^3.4.3",
     "next": "13.5.4",
     "next-contentlayer": "^0.3.4",
