--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "@preact/signals-react": "^1.3.7",
     "@ramonak/react-progress-bar": "^5.1.1",
     "appwrite": "^13.0.0",
     "classnames": "^2.3.2",
