--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": ">=10",
     "postcss": "^8.4.31",
-    "prettier": "3.0.3",
+    "prettier": "^3.1.0",
     "react-router-dom": "^6.17.0",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
