--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.14.18",
     "@ramonak/react-progress-bar": "^5.1.1",
     "appwrite": "^13.0.0",
+    "chart.js": "^4.4.1",
     "classnames": "^2.3.2",
     "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
@@ -29,6 +30,7 @@
     "next": "13.5.4",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.48.1",
