--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.48.1",
     "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
@@ -46,6 +47,7 @@
     "@types/react-dom": "^18",
     "@types/react-router-dom": "^5.3.3",
     "@types/use-sync-external-store": "^0.0.6",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.4.16",
