--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "@ramonak/react-progress-bar": "^5.1.1",
+    "@tanstack/react-query": "^5.13.4",
     "appwrite": "^13.0.0",
     "chart.js": "^4.4.1",
     "classnames": "^2.3.2",
@@ -38,6 +39,7 @@
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.12.1",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
