--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "jest --watchAll",
     "coverage": "jest --coverage",
     "postinstall": "husky install",
-    "precommit": "yarn lint && yarn test"
+    "precommit": "yarn lint && yarn test",
+    "format": "prettier --write '*/**/*.{js,css,md,ts,tsx}'"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
