--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "@preact/signals-react": "^1.3.7",
     "@ramonak/react-progress-bar": "^5.1.1",
     "@tanstack/react-query": "^5.13.4",
     "appwrite": "^13.0.0",
@@ -50,6 +51,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-router-dom": "^5.3.3",
+    "@types/use-sync-external-store": "^0.0.6",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.4.16",
@@ -63,7 +66,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": ">=10",
     "postcss": "^8.4.31",
-    "prettier": "3.0.3",
+    "prettier": "^3.1.0",
     "react-router-dom": "^6.17.0",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
